# comfyui-save-text-node

./: .gitignore  AGENTS.md  README.md  __init__.py  changelog.md  nodes.py  pyproject.toml
docs/agents/implementation-history/: README.md
docs/agents/implementation-history/2026-07/2026-07-01-save-text-node/: plan.md  synthesis.md
docs/agents/implementation-history/2026-07/2026-07-01-save-text-node-rework-1/: plan.md  synthesis.md
docs/agents/project-manifest/: README.md  api-surface.md  constraints.md  data-flows.md  file-tree.md  tech-stack.md
docs/agents/projects/: node-project.md
